-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 14.0.2
-
-
f1649ae93 (16.0)
In Qt Creator, I have checked the "Instant Blame" box in Preferences > Version Control > Git.
When I write new code and save the file, I see a message on the right of the code line that writes "Not Committed Yet YYYY-MM-DD" (see the attached screenshot). "Not Committed Yet" is not translated and I did not find this string in the source code (I just see this string as a comment in gitclient.cpp). So it is not clear to me where this string comes from.
Could you allow this string to be translated?
| For Gerrit Dashboard: QTCREATORBUG-32093 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 623300,2 | Git: InstantBlame: Make uncommited line info translatable | 16.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |