Git: InstantBlame: Make uncommited line info translatable

The orginal output from git is:
* "Not Committed Yet" for the author
* "Version of %1 from %1" for the subject

Fixes: QTCREATORBUG-32093
Change-Id: I541895b079880727ea0a47d1b4fda8c80b6d313c
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Olivier Delaune <olivier+qt@delaune.info>